--- a/app/views/work_locations/new_page.html.erb
+++ b/app/views/work_locations/new_page.html.erb
@@ -6,19 +6,23 @@
 
     <form action="/insert_work_location" method="post">
       <div>
-        <label for="location_type_id_box">
+        <label for="location_type_box">
           Location type
         </label>
-
-        <input type="text" id="location_type_id_box" name="query_location_type_id">
-      </div>
+        <select name="query_location_type" id="location_type_box">
+           <% @loc_types.each do |item| %>
+             <option value= "<%=item.id %>"><%= item.descriptor %></option>
+           <% end %>
+        </select>
 
       <div>
-        <label for="wifi_speed_box">
-          Wifi speed
+        <label for="name_box">
+          Name
         </label>
 
-        <input type="text" id="wifi_speed_box" name="query_wifi_speed">
+        <input type="text" id="name_box" name="query_name">
+      </div>
+
       </div>
 
       <div>
@@ -102,22 +106,6 @@
       </div>
 
       <div>
-        <label for="longitude_box">
-          Longitude
-        </label>
-
-        <input type="text" id="longitude_box" name="query_longitude">
-      </div>
-
-      <div>
-        <label for="latitude_box">
-          Latitude
-        </label>
-
-        <input type="text" id="latitude_box" name="query_latitude">
-      </div>
-
-      <div>
         <label for="description_box">
           Description
         </label>
@@ -126,43 +114,11 @@
       </div>
 
       <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name">
-      </div>
-
-      <div>
-        <label for="average_rating_box">
-          Average rating
-        </label>
-
-        <input type="text" id="average_rating_box" name="query_average_rating">
-      </div>
-
-      <div>
-        <label for="owner_id_box">
+        <label for="owner_box">
           Owner
         </label>
 
-        <input type="text" id="owner_id_box" name="query_owner_id">
-      </div>
-
-      <div>
-        <label for="crowding_average_box">
-          Crowding average
-        </label>
-
-        <input type="text" id="crowding_average_box" name="query_crowding_average">
-      </div>
-
-      <div>
-        <label for="noise_average_box">
-          Noise average
-        </label>
-
-        <input type="text" id="noise_average_box" name="query_noise_average">
+        <input type="text" id="owner_box" name="query_owner">
       </div>
 
       <div>
