--- a/app/views/work_locations/index.html.erb
+++ b/app/views/work_locations/index.html.erb
@@ -42,7 +42,7 @@
             </td>
 
             <td>
-              <%= a_work_location.location_type_id %>
+              <%= a_work_location.type%>
             </td>
 
             <td>
