--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,13 @@
   <body>
       <h1>Dino Desks</h1>
       <%if current_user == nil%>
+        <a href="/">Home</a>
         <a href="/users/sign_in">Sign in</a>
         <a href="/users/sign_up">Sign_up</a>
         
       <%else%>
-        <a href="/users/edit_profile">Edit profile</a>
+        <a href="/">Home</a>
+        <a href="/profile">Profile</a>
         <a href="/users/sign_out">Sign out</a>
 
       <%end%>
