--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -19,19 +19,33 @@
       </div>
 
       <div>
+
         <label for="stars_box">
           Stars
         </label>
 
-        <input type="text" id="stars_box" name="query_stars">
+        <select name="query_stars" id="stars_box">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+
       </div>
 
       <div>
         <label for="wifi_rating_box">
           Wifi rating
         </label>
-
-        <input type="text" id="wifi_rating_box" name="query_wifi_rating">
+        <select name="query_wifi_rating" id="wifi_rating_box">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+ 
       </div>
 
       <div>
@@ -39,7 +53,14 @@
           Crowding score
         </label>
 
-        <input type="text" id="crowding_score_box" name="query_crowding_score">
+        <select name="query_crowding_score" id="crowding_score_box">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+
       </div>
 
       <div>
@@ -47,7 +68,13 @@
           Noise level
         </label>
 
-        <input type="text" id="noise_level_box" name="query_noise_level">
+        <select name="query_noise_level" id="noise_level_box">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
       </div>
 
             <div>
