Removed API Key

--- a/app/views/work_locations/show.html.erb
+++ b/app/views/work_locations/show.html.erb
@@ -188,10 +188,9 @@
   @the_work_location.state,
   @the_work_location.zip_code
 ].map(&:to_s).join('+')%>
-<%api="https://www.google.com/maps/embed/v1/place?key=AIzaSyBOmkmNEI6pvBlaQLHufHriV05FQruquog
+<%api="https://www.google.com/maps/embed/v1/place?key=
     &q="%>
 <%gapi2=api+gapi%>
-
 
 
 
